# image-matching-models

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TEMPLATE.py  add_to_hfhub.ipynb  app.py  benchmark.py  download_models.sh  imm_benchmark.py  imm_extract.py  imm_match.py  install.bat  install.sh  main.py  main_extractor.py  main_matcher.py  matchers.py  pyproject.toml  requirements.txt  run_matching.py  util.py  vismatch_extract.py  vismatch_match.py  vismatch_test.py
.github/workflows/: publish.yml
assets/: example_pairs_paths.txt
docs/: matchanything.md  model_details.md
image_matching_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
imm/: TEMPLATE.py  __init__.py  base_matcher.py  utils.py  viz.py
imm/assets/: example_pairs_paths.txt
imm/im_models/: aff_steerers.py  aspanformer.py  dedode.py  duster.py  edm.py  efficient_loftr.py  gim.py  handcrafted.py  keypt2subpx.py  kornia.py  liftfeat.py  lightglue.py  lisrd.py  loftr.py  master.py  matchanything.py  matchformer.py  matching_toolbox.py  minima.py  omniglue.py  rdd.py  ripe.py  roma.py  romav2.py  se2loftr.py  silk.py  sphereglue.py  steerers.py  topicfm.py  ufm.py  xfeat.py  xfeat_steerers.py  xoftr.py
matching/: TEMPLATE.py  __init__.py  aspanformer.py  base_matcher.py  dedode.py  duster.py  efficient_loftr.py  gim.py  handcrafted.py  keypt2subpx.py  kornia.py  lightglue.py  loftr.py  master.py  matchformer.py  matching_toolbox.py  omniglue.py  roma.py  se2loftr.py  silk.py  steerers.py  utils.py  viz.py  xfeat.py
matching/im_models/: aff_steerers.py  aspanformer.py  base_matcher.py  dedode.py  dtm.py  duster.py  edm.py  efficient_loftr.py  gim.py  handcrafted.py  jamma.py  keypt2subpx.py  kornia.py  liftfeat.py  lightglue.py  lisrd.py  loftr.py  mambaglue.py  master.py  matchanything.py  matchformer.py  matching_toolbox.py  minima.py  omniglue.py  rdd.py  ripe.py  roma.py  romav2.py  se2loftr.py  silk.py  sphereglue.py  steerers.py  topicfm.py  ufm.py  xfeat.py  xfeat_steerers.py  xoftr.py
matching/models/: dedode.py  gim.py  keypt2subpx.py  lightglue.py  loftr.py  master.py  matchformer.py  roma.py  silk.py
vismatch/: TEMPLATE.py  __init__.py  base_matcher.py  utils.py  viz.py
vismatch/assets/: example_pairs_paths.txt
vismatch/im_models/: aff_steerers.py  aspanformer.py  dedode.py  duster.py  edm.py  efficient_loftr.py  gim.py  handcrafted.py  keypt2subpx.py  kornia.py  liftfeat.py  lightglue.py  lisrd.py  loftr.py  master.py  matchanything.py  matchformer.py  matching_toolbox.py  minima.py  omniglue.py  rdd.py  ripe.py  roma.py  romav2.py  se2loftr.py  silk.py  sphereglue.py  steerers.py  topicfm.py  ufm.py  xfeat.py  xfeat_steerers.py  xoftr.py  zippypoint.py
webui/config/: app.yaml
webui/ui/: app_class.py  utils.py
