[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-matching-models"
readme = "README.md"
description = "Easily test and apply pairwise image matching models"
authors = [
  {name = "Alex Stoken", email = "alex.stoken@gmail.com"},
  {name = "Gabriele Berton", email = "berton.gabri@gmail.com"},
  {name = "Gabriele Trivigno", email = "gabriele.trivigno@polito.it"},
]
maintainers = [
  {name = "Alex Stoken", email = "alex.stoken@gmail.com"},
  {name = "Gabriele Berton", email = "berton.gabri@gmail.com"},
]
requires-python = ">= 3.10"
license = {file = "LICENSE"}
keywords = ["image matching"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/gmberton/image-matching-models"
Repository = "https://github.com/gmberton/image-matching-models"

[project.optional-dependencies]
omniglue = ["tensorflow"]
sphereglue = ["torch-geometric", "torch-cluster"]
all = ["image-matching-models[omniglue, sphereglue]"]

[tool.setuptools.dynamic]
version = {attr = "matching.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 120
exclude = ["matching/third_party"]

[tool.ruff.lint]
ignore = ["E402", "E501"]

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]

[tool.setuptools]
py-modules = ["imm_match", "imm_extract", "imm_benchmark"]

[project.scripts]
imm-match = "imm_match:main"
imm-extract = "imm_extract:main"