[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vismatch"
readme = "README.md"
description = "Easily test and apply pairwise image matching models"
authors = [
  {name = "Alex Stoken", email = "alex.stoken@gmail.com"},
  {name = "Gabriele Berton", email = "berton.gabri@gmail.com"},
  {name = "Gabriele Trivigno", email = "gabriele.trivigno@polito.it"},
]
maintainers = [
  {name = "Alex Stoken", email = "alex.stoken@gmail.com"},
  {name = "Gabriele Berton", email = "berton.gabri@gmail.com"},
]
requires-python = ">= 3.10"
license = {file = "LICENSE"}
keywords = ["image matching"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/gmberton/vismatch"
Repository = "https://github.com/gmberton/vismatch"
HuggingFace = "https://huggingface.co/image-matching-models"


[project.optional-dependencies]
omniglue = ["tensorflow"]
sphereglue = ["torch-geometric", "torch-cluster"]
all = ["vismatch[omniglue, sphereglue]"]

[tool.setuptools.dynamic]
version = {attr = "vismatch.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 120
exclude = ["vismatch/third_party"]

[tool.ruff.lint]
ignore = ["E402", "E501"]

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]

[tool.setuptools]
py-modules = ["vismatch_match", "vismatch_extract", "vismatch_test"]
include-package-data = true

[project.scripts]
vismatch-match = "vismatch_match:main"
vismatch-extract = "vismatch_extract:main"
vismatch-test = "vismatch_test:main"